tests/NormalTests/paczka1/fuzzy1/28813775.err
Error in line 8: mTegO4n A969 71,1
Error in line 9: mTegO4n A925 55,4
Error in line 10: mTegO4n S522 29,2
Error in line 14: mTegO4n A969 20,3
Error in line 32: A925 A969 82,69
Error in line 30: C1gpJW A969 58,9
Error in line 34: C1gpJW S522 57,3
Error in line 36: jCc4 S842 5,0
